--- a/allergy-ai/package.json
+++ b/allergy-ai/package.json
@@ -17,13 +17,21 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "katex": "^0.16.11",
     "lucide-react": "^0.454.0",
+    "mermaid": "^11.4.0",
     "next": "^14.2.33",
     "next-auth": "^4.24.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "shiki": "^1.24.0",
     "tailwind-merge": "^2.5.4",
     "zustand": "^4.5.5"
   },
