--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,16 @@ dependencies = [
     "streamlit>=1.51.0",
     "vllm>=0.11.0",
 ]
+
+[project.optional-dependencies]
+train = [
+    "transformers>=4.46.0",
+    "peft>=0.13.0",
+    "bitsandbytes>=0.44.0",
+    "datasets>=3.0.0",
+    "trl>=0.12.0",
+    "accelerate>=1.0.0",
+    "scipy>=1.14.0",
+    "wandb>=0.18.0",
+    "requests>=2.32.0",
+]
