Upload generated 1k samples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,6 @@ train = [
     "scipy>=1.14.0",
     "wandb>=0.18.0",
     "requests>=2.32.0",
+    "google-generativeai>=0.8.0",
+    "google-cloud-aiplatform>=1.70.0",
 ]
