Fix frontend api calls logic

--- a/allergy-ai/.env.local
+++ b/allergy-ai/.env.local
@@ -1,3 +1,7 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000/v1
+﻿# Internal vLLM URL (used by Next.js server-side proxy)
+# This is always localhost because Next.js and vLLM run on the same machine
+VLLM_INTERNAL_URL=http://127.0.0.1:8000
+
+# NextAuth Configuration
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-super-secret-key-for-allergy-ai-development
+NEXTAUTH_SECRET=your-super-secret-key-change-in-production
