--- a/allergy-ai/package.json
+++ b/allergy-ai/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "katex": "^0.16.11",
     "lucide-react": "^0.454.0",
     "mermaid": "^11.4.0",
