--- a/allergy-ai/package.json
+++ b/allergy-ai/package.json
@@ -47,7 +47,7 @@
     "autoprefixer": "^10.4.20",
     "cypress": "^13.15.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^16.0.5",
+    "eslint-config-next": "14.2.33",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
